# pi_patrol

./: .gitignore  README.md  requirements.txt
src/pi_patrol/: .env.example  package.xml  setup.cfg  setup.py
src/pi_patrol/launch/: pi_patrol.launch.py
src/pi_patrol/pi_patrol/: camera_node.py  detection_node.py  recorder_node.py  server_node.py  telegram_notifier_node.py
src/tracking_robot/: package.xml  setup.cfg  setup.py
src/tracking_robot/tracking_robot/: camera_test.py  detection_node.py  recorder_node.py
